--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sass": "^1.83.4",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "dev": "vite",
