--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^22.10.6",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.9",
     "fast-glob": "^3.3.3",
