--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2",
     "sass": "^1.83.4",
+    "swiper": "^11.2.6",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "web-vitals": "^2.1.0",
