--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.0.0",
+    "antd": "^5.24.8",
     "axios": "^1.7.9",
     "fast-glob": "^3.3.3",
     "i18next": "^24.2.1",
