--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^5.24.8",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "fast-glob": "^3.3.3",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
